--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/declaration?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/declaration?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.tomcat.initial-size=50
+spring.datasource.tomcat.max-active=100
+spring.datasource.tomcat.max-idle=50
+spring.datasource.tomcat.max-wait=10000
 
 #thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
